@@ -2,6 +2,8 @@ Changes in version 0.9.9
 
 o **UPDATE**: default undimensionality adjustment has changed to leading eigenvalue (see Christensen, Garrido, & Golino, 2021). Previous unidimensionality adjustment in versions <= 0.9.8 can be applied using `uni.method = "expand"`
 
+O **UPDATE**: default `UVA` was changed `type = "threshold"`
+
 o DEFUNCT: `dimStability` will no longer be supported. Instead, use `dimensionStability`
 
 o REVAMP: `itemStability` has been recoded. Now includes error checking and more readable code 
